--- a/css/reset.css
+++ b/css/reset.css
@@ -1,11 +1,13 @@
 *{
     transition: 0.2s;
+    padding: 0;
+    margin: 0;
 }
 body{
+    width: 100%;
     position: relative;
     padding: 0;
     margin: 0;
-    height: 100vh;
     --white: white;
     --orange: #c5a47e;
 }
