--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,7 +114,7 @@
 }
 
 .menu-exit-background {
-  background-color: rgba(34, 34, 34, 0.897);
+  background-color: rgba(34, 34, 34, 0.692);
 }
 
 .custom-nav {
@@ -177,6 +177,65 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.center-screen {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.w800h600 {
+  width: 800px !important;
+  height: 600px;
+}
+
+.clock-column::after, .clock-column::before {
+  content: "";
+  position: absolute;
+  top: 60%;
+  right: -3px;
+  width: 8px;
+  height: 8px;
+  background-color: #818181c9;
+  border-radius: 50%;
+}
+.clock-column::after {
+  top: calc(60% + 30px);
+}
+.clock-column:last-child::after, .clock-column:last-child::before {
+  content: "";
+  display: none;
+}
+.clock-column .title {
+  text-transform: capitalize;
+  font-size: 1.5rem;
+  color: #7c7c7c;
+  font-weight: 400;
+  margin: 0.9rem 0;
+}
+.clock-column .number {
+  font-size: 50px;
+  background-color: #272727;
+  color: #1FBCFC;
+  padding: 0;
+  width: 50px;
+  border-radius: 5px;
+  line-height: 70px;
+  margin-right: 5px;
+  font-weight: 600;
+  text-align: center;
+  position: relative;
+}
+
+.comming-soon-layout {
+  padding: 50px 70px 80px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.bg-custom-light {
+  background-color: #e6e6e6;
 }
 
 /*# sourceMappingURL=main.css.map */
