--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -114,7 +114,7 @@
     }
     
     .menu-exit-background {
-        background-color: rgba(34, 34, 34, 0.897);
+        background-color: rgba(34, 34, 34, 0.692);
     }
     
     .custom-nav {
@@ -175,4 +175,70 @@
     
      ::-webkit-scrollbar-thumb:hover {
         background: #555;
+    }
+    
+    .center-screen {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .w800h600 {
+        width: 800px !important;
+        height: 600px;
+    }
+    
+    .clock-column {
+        $top: 60%;
+        &::after,
+        &::before {
+            content: '';
+            position: absolute;
+            top: $top;
+            right: -3px;
+            width: 8px;
+            height: 8px;
+            background-color: #818181c9;
+            border-radius: 50%;
+        }
+        &::after {
+            top: calc($top + 30px);
+        }
+        &:last-child {
+            &::after,
+            &::before {
+                content: '';
+                display: none;
+            }
+        }
+        .title {
+            text-transform: capitalize;
+            font-size: 1.5rem;
+            color: rgb(124, 124, 124);
+            font-weight: 400;
+            margin: .9rem 0;
+        }
+        .number {
+            font-size: 50px;
+            background-color: $lightblack;
+            color: #1FBCFC;
+            padding: 0;
+            width: 50px;
+            border-radius: 5px;
+            line-height: 70px;
+            margin-right: 5px;
+            font-weight: 600;
+            text-align: center;
+            position: relative;
+        }
+    }
+    
+    .comming-soon-layout {
+        padding: 50px 70px 80px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    }
+    
+    .bg-custom-light {
+        background-color: rgb(230, 230, 230);
     }
