--- a/public/css/main.css
+++ b/public/css/main.css
@@ -190,11 +190,14 @@
   height: 600px;
 }
 
+.clock-column {
+  position: relative;
+}
 .clock-column::after, .clock-column::before {
   content: "";
   position: absolute;
   top: 60%;
-  right: -3px;
+  right: -25px;
   width: 8px;
   height: 8px;
   background-color: #818181c9;
